# League-Lobby-Revealer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  settings.ini
src/: Settings.py
src/Communicators/: AbstractCommunicator.py  DataDragonCommunicator.py  InGameAPICommunicator.py  LCUCommunicator.py  RiotClientCommunicator.py
src/DTOs/: ChampionMasteryDTO.py  ChatParticipantsDTO.py  CurrentRankedInfoDTO.py  PlayerInfoDTO.py  SummonerDTO.py
src/Exceptions/: InvalidTeamException.py  LeagueNotOpenException.py  NotValidClientPhaseException.py
src/Factories/: PlayerInfoFactory.py
