[tool.poetry]
name = "League Lobby Revealer"
version = "1.0.0"
description = "CLI (for now) tool to reveal people in your ranked lobby"
authors = ["https://github.com/sevnnn"]
readme = "README.md"
packages = [{include = "league_lobby_revealer"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
black = "^23.3.0"
urllib3 = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
